--- a/src/Services/Catalog.API/Catalog.API.csproj
+++ b/src/Services/Catalog.API/Catalog.API.csproj
@@ -14,7 +14,16 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="models\" />
+      <Folder Include="Data\" />
+      <Folder Include="Exceptions\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\BuildingBlocks\BuildingBlocks\BuildingBlocks.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Carter" Version="8.2.1" />
     </ItemGroup>
 
 </Project>
