--- a/src/Services/Catalog.API/appsettings.json
+++ b/src/Services/Catalog.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Database": "Server=localhost;Port=5432;User Id=postgres;Database=CatalogDb;Password=postgres;"
+  },
   "AllowedHosts": "*"
 }
