--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -10,7 +10,22 @@ services:
       - "5432:5432"
     volumes:
       - postgres_catalog:/var/lib/postgresql/data/
-      
+        
+
+  basketdb:
+    container_name: basketdb
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=BasketDb
+    restart: always
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres_basket:/var/lib/postgresql/data/
+  
+  
+  
   catalog.api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
@@ -27,6 +42,6 @@ services:
     volumes:
       - ./Services/Catalog.API/https:/https:ro
       - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
-#      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+      #      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
       
     
