--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -2,11 +2,15 @@ services:
   
   catalogdb:
     image: postgres
-    
+  
+  basketdb:
+    image: postgres
+  
   catalog.api:
     image: catalog.api
     build:
       context: .
       dockerfile: Services/Catalog.API/Dockerfile
-volumes: 
+volumes:
   postgres_catalog:
+  postgres_basket:
